12-ingress-internal-LB/curl-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
    - name: curl-pod
      image: curlimages/curl
      command:
        - sleep
        - "600"
