12-ingress-internal-LB/app1nginx-deployment-nodeport.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  labels:
    app: app1-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
    app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
      - name: app1-nginx
        image: kube-nginxapp1:1.0.0
        ports:
          containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-nodeport-service
  labels:
    app: app1-nginx  
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  selector:
    app: app1-ngninx
  type: Nodeport
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
